--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SPL project",
   "main": "app.js",
   "scripts": {
-    "start": "npm run lite",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server"
   },
