--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SPL project",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server"
   },
@@ -23,14 +23,18 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "bootstrap-social": "^5.1.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.8.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.17",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
