--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "bootstrap-social": "^5.1.1",
     "dotenv": "^8.2.0",
@@ -36,10 +35,13 @@
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.17",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "shortid": "^2.2.16",
+    "slugify": "^1.4.6"
   },
   "keywords": [
     "e-learning"
