--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/Dead-Code-18/ELearning.git"
   },
   "author": "DeadCode",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Dead-Code-18/ELearning/issues"
   },
