--- a/app/package.json
+++ b/app/package.json
@@ -23,9 +23,11 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "bootstrap-social": "^5.1.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -36,6 +38,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.17",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
